--- a/style.css
+++ b/style.css
@@ -1,6 +1,47 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+header{
+    margin-bottom: 50px;
+}
+.menu{
+    
+    background: #7a7171;
+    overflow: hidden;
+}
+
+.logo{
+    display: inline-block;
+    margin-top: 10px;
+}
+.logo a{
+    text-decoration: none;
+    padding-left: 20px;
+    color: #ffbc05;
+    font-size: 24px;
+
+}
+.logo a span{
+    color: #00ff40;
+    font-weight: 900;
+}
+
+header ul{
+    padding-right: 10px;
+    list-style: none;
+    overflow: hidden;
+    display: flex;
+    float: right;
+    margin: 0;  
+}
+header li a{
+    display: block;
+    color: #fff;
+    padding: 20px 20px;
+    text-decoration: none;
+    font-weight: 700;
+    text-align: right;
+} 
 .tomato-color{
     color: tomato;
 }
@@ -8,7 +49,7 @@ body{
     display: flex;
     margin-bottom: 100px;
 }
-.flexible-container a{
+.orange-color{
     background-image: linear-gradient(tomato, salmon);
     border-radius: 30px;
     padding: 10px 20px;
@@ -31,11 +72,47 @@ body{
 .order-menu{
     text-align: center;
 }
-.manu-item{
+.menu-item{
     display: flex;
     justify-content: space-around;
     background-color: wheat;
 }
 .recipies{
     text-align: center;
+}
+.third-part{
+    flex-direction: row;
+    margin-bottom: 100px;
+}
+.pic{
+    max-width: 100%;
+    height: 200px;
+    border-radius: 100px;
+    
+}
+.berger{
+    margin: 10px; 
+}
+footer{
+    background-color: black;
+    text-align: center;
+}
+footer h1 {
+    color: blanchedalmond;
+}
+#follower-part{
+    display: flex;
+    justify-content: space-around;
+}
+.buttom-color{
+    background-image: linear-gradient(tomato, salmon);
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-weight: 500;
+    text-decoration: none;
+    color: white;
+    margin-top: 10px;
+}
+#order-part{
+    margin-top: 50px;
 }
