--- a/style.css
+++ b/style.css
@@ -1,29 +1,36 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+/* /header\ */
 header{
     margin-bottom: 50px;
 }
-.menu{
-    
-    background: #7a7171;
-    overflow: hidden;
-}
-
 .logo{
     display: inline-block;
     margin-top: 10px;
 }
+
+.menu{
+    
+    background-color: rgb(46, 2, 24);
+    overflow: hidden;
+}
+
 .logo a{
     text-decoration: none;
     padding-left: 20px;
     color: #ffbc05;
     font-size: 24px;
+    font-weight: 900;
 
 }
 .logo a span{
     color: #00ff40;
     font-weight: 900;
+}
+
+.title-blog{
+    text-align: center;
 }
 
 header ul{
@@ -42,6 +49,44 @@ header li a{
     font-weight: 700;
     text-align: right;
 } 
+
+/* second part */
+#recipies{ 
+     display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: auto;
+    margin-bottom: 30px;
+
+}
+.about-item{
+    box-shadow: 5px 0px 10px 5px rgb(0 0 0 / 15%);
+    border-radius: 20px;
+    padding: 20px;
+    width: 27%;
+    position: relative;
+    background: #FFF;
+}
+.item-part{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-around;
+    align-items: center;
+}
+.item-part img {
+    width: 100%;
+    height: 250px;
+    border-radius: 15px;
+}
+.second-part{
+    height: 800px;
+}
 .tomato-color{
     color: tomato;
 }
@@ -69,6 +114,7 @@ header li a{
     background-image: url(images/need-image/7.png);
     background-repeat: no-repeat;
 }
+/* third pard */
 .order-menu{
     text-align: center;
 }
@@ -80,19 +126,7 @@ header li a{
 .recipies{
     text-align: center;
 }
-.third-part{
-    flex-direction: row;
-    margin-bottom: 100px;
-}
-.pic{
-    max-width: 100%;
-    height: 200px;
-    border-radius: 100px;
-    
-}
-.berger{
-    margin: 10px; 
-}
+
 footer{
     background-color: black;
     text-align: center;
@@ -115,4 +149,15 @@ footer h1 {
 }
 #order-part{
     margin-top: 50px;
+}
+
+/* footer part */
+#serve-color{
+    color: #00ff40;
+    font-weight: 900;
+
+}
+#food-color {
+    color: #ffbc05;
+    font-weight: 900;
 }
