--- a/style.css
+++ b/style.css
@@ -83,6 +83,8 @@ header li a{
     width: 100%;
     height: 250px;
     border-radius: 15px;
+    border-image-slice: 1;
+
 }
 .second-part{
     height: 800px;
